Feat: Login & Signup Screens UI & Form Validations

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,8 +19,8 @@ a {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  /* display: flex; */
+  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
 }
